# operating_systems

./: .gitignore  CMakeLists.txt  README.md
lab1/: CMakeLists.txt  main.cpp
lab1/include/: parent.hpp  utils.hpp
lab1/src/: child.cpp  child1.cpp  child2.cpp  parent.cpp  utils.cpp
lab2/: CMakeLists.txt  main.cpp
lab2/include/: sort.hpp
lab2/src/: sort.cpp
tests/: CMakeLists.txt  lab1_test.cpp  lab2_test.cpp
